--- a/templates/latex_templates/simple_article_latex_template/simple_article_latex_template.tex
+++ b/templates/latex_templates/simple_article_latex_template/simple_article_latex_template.tex
@@ -19,7 +19,7 @@
 
 \section{Introduction}
 This is a template latex project ment to be used when creating new \LaTeX \space documents. You could easily copy this .tex file and delete all content, and then use what you need. I have included many examples of how you can use different features of \LaTeX, hopefully making it easy for you to get started.\\
-\textbf{Pro tip:} type '\textbf{new\_latex}' in the terminal to generate a new latex project at your current working directory\footnote{This assumes you have installed \href{https://www.tug.org/texshowcase}{Linux Tricks}}.
+\textbf{Pro tip:} type '\textbf{new\_latex}' in the terminal to generate a new latex project at your current working directory\footnote{This assumes you have installed \href{https://github.com/Haraldlons/linux-tricks}{Linux Tricks}}.
 
 \begin{lstlisting}[language=bash,caption={Example of getting started}]
 harald@harald-tower:~$ cd ~/Documents/
